2007-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c: Enable stopping of Run command on Windows.


2007-11-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/svndiff.c:
   Fix sign comparison warning.
 * plugins/svndiff.c:
   Fix gtk_widget_destroy() warning when unloading plugin and no svn
   binary is in $PATH.
 * plugins/svndiff.c:
   Add menu separator so users don't accidentally click revert and lose
   all their work.
   Capitalize revert menu item.
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Add 'Strip Trailing Spaces' document menu item.
 * src/keybindings.c, src/keybindings.h, src/plugindata.h, TODO:
   Make VTE interpret all keyboard shortcuts except for focus group
   keybindings.
   Add enum values for keybinding groups.
   Make Notebook tabs keybindings group.
   Move Go to tags items into Tags keybindings group.
   Move navigation items into a new Other keybindings group.


2007-11-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * HACKING:
   Update 'Adding a filetype' section for new highlighting.c code.


2007-11-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c, src/document.c, src/utils.c:
   Don't use unnecessary #ifdefs for utils_get_locale_from_utf8().


2007-11-05  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/svndiff.c:
   Added function for svn revert and check before complete loading of
   then plugin if svn is inside $PATH.
   Added patch from Yura Siamashka to re-use an already created tab
   for a new diff on the same file. Thanks.


2007-11-04  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/build.c:
   Fix error in Compile and Build commands on Windows if the command
   contains double quotes.
   Fix error in Build command when the executable file name contains
   spaces(Linux and Windows).
 * src/filetypes.c: Add support for env wrapper in shebang detection